--- a/themes/anatole/assets/css/style.css
+++ b/themes/anatole/assets/css/style.css
@@ -59,6 +59,14 @@ blockquote {
     color: var(--blockquote-text-color);
 }
 
+.action {
+    padding: 0.6em;
+    background: black;
+    color: white;
+    border: 2px solid blue;
+    border-radius: 10px;
+}
+
 .category {
     padding: 4px 6px;
     border-radius: 3px;
